--- a/data/dataWrang.ipynb
+++ b/data/dataWrang.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
        "[25840 rows x 18 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,14 +383,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(25840, 5)\n",
+      "(25840, 7)\n",
+      "(25840, 8)\n",
+      "(25840, 9)\n",
+      "(30773, 12)\n"
+     ]
+    }
+   ],
    "source": [
+    "print(results.shape)\n",
     "results = results.merge(races, on='raceId', how='inner')\n",
+    "print(results.shape)\n",
     "results = results.merge(drivers, on='driverId', how='left')\n",
+    "print(results.shape)\n",
     "results = results.merge(constructors, on='constructorId', how='left')\n",
-    "results = results.merge(pitstops, on=['raceId', 'driverId'], how='left')"
+    "print(results.shape)\n",
+    "results = results.merge(pitstops, on=['raceId', 'driverId'], how='left')\n",
+    "print(results.shape)"
    ]
   },
   {
@@ -405,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -497,38 +514,38 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2331</th>\n",
+       "      <th>2477</th>\n",
        "      <td>2018</td>\n",
        "      <td>Max Verstappen</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2332</th>\n",
+       "      <th>2478</th>\n",
        "      <td>2019</td>\n",
        "      <td>Max Verstappen</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2333</th>\n",
+       "      <th>2479</th>\n",
        "      <td>2020</td>\n",
        "      <td>Max Verstappen</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2334</th>\n",
+       "      <th>2480</th>\n",
        "      <td>2021</td>\n",
-       "      <td>Max Verstappen</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2335</th>\n",
-       "      <td>2022</td>\n",
        "      <td>Max Verstappen</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2481</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>Max Verstappen</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2336 rows × 3 columns</p>\n",
+       "<p>2482 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -539,29 +556,35 @@
        "3     1953     Nino Farina   1.0\n",
        "4     1954     Nino Farina   1.0\n",
        "...    ...             ...   ...\n",
-       "2331  2018  Max Verstappen   0.0\n",
-       "2332  2019  Max Verstappen   0.0\n",
-       "2333  2020  Max Verstappen   0.0\n",
-       "2334  2021  Max Verstappen   0.0\n",
-       "2335  2022  Max Verstappen   1.0\n",
+       "2477  2018  Max Verstappen   0.0\n",
+       "2478  2019  Max Verstappen   0.0\n",
+       "2479  2020  Max Verstappen   0.0\n",
+       "2480  2021  Max Verstappen   1.0\n",
+       "2481  2022  Max Verstappen   2.0\n",
        "\n",
-       "[2336 rows x 3 columns]"
+       "[2482 rows x 3 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "columnsDriverWinners = ['year', 'raceId', 'raceName', 'driverFullname', 'points']\n",
-    "totalPoints = results[columnsDriverWinners] \\\n",
+    "totalPoints = results[columnsDriverWinners].drop_duplicates() \\\n",
     "              .groupby(['year', 'driverFullname'])['points'] \\\n",
     "              .sum() \\\n",
     "              .reset_index(name='points')\n",
     "              \n",
     "# keep only the winners per year\n",
     "driversWinners = totalPoints.loc[totalPoints.groupby('year')['points'].idxmax()] \n",
+    "\n",
+    "# change the winner in 1964\n",
+    "driversWinners.loc[driversWinners['year'] == 1964, 'driverFullname'] = 'John Surtees'\n",
+    "\n",
+    "# change the winner in 1988\n",
+    "driversWinners.loc[driversWinners['year'] == 1988, 'driverFullname'] = 'Ayrton Senna'\n",
     "\n",
     "# indicator variable for the winners\n",
     "driversWinners['winner'] = 1\n",
@@ -591,7 +614,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columnsConstructorsWinners = ['year', 'raceId', 'raceName', 'constructorName', 'points']\n",
+    "\n",
+    "flt = results['year'] >= 1958\n",
+    "\n",
+    "totalPoints = results[columnsConstructorsWinners][flt].drop_duplicates() \\\n",
+    "              .groupby(['year', 'constructorName'])['points'] \\\n",
+    "              .sum() \\\n",
+    "              .reset_index(name='points')\n",
+    "              \n",
+    "# keep only the winners per year\n",
+    "constructorsWinners = totalPoints.loc[totalPoints.groupby('year')['points'].idxmax()] \n",
+    "\n",
+    "# change the winner in 1964\n",
+    "constructorsWinners.loc[constructorsWinners['year'] == 1964, 'constructorName'] = 'Ferrari'\n",
+    "\n",
+    "# change the winner in 1988\n",
+    "constructorsWinners.loc[constructorsWinners['year'] == 1988, 'constructorName'] = 'McLaren'\n",
+    "\n",
+    "# indicator variable for the winners\n",
+    "constructorsWinners['winner'] = 1\n",
+    "\n",
+    "# get the cumulative count of wins\n",
+    "constructorsWinners['wins'] = constructorsWinners.groupby(['constructorName'])['winner'].cumsum()\n",
+    "\n",
+    "# Get unique car constructors\n",
+    "car_constructors = constructorsWinners['constructorName'].unique()\n",
+    "\n",
+    "# Create a new dataframe with all years and cumulative sum for each constructor\n",
+    "years = range(constructorsWinners['year'].min(), constructorsWinners['year'].max() + 1)\n",
+    "newConstructorsWinners = pd.DataFrame({'year': years})\n",
+    "for constructor in car_constructors:\n",
+    "    constructor_cumsum = constructorsWinners[constructorsWinners['constructorName'] == constructor]['year'].value_counts().sort_index().cumsum()\n",
+    "    newConstructorsWinners[constructor] = newConstructorsWinners['year'].map(constructor_cumsum).fillna(method='ffill').fillna(0)\n",
+    "    # method = 'ffill' gets the last non-null value and fills the nulls with it\n",
+    "\n",
+    "# pivot to make the columns turn into rows\n",
+    "newConstructorsWinners = newConstructorsWinners.melt(id_vars=['year'], var_name='constructorName', value_name='wins')\n",
+    "\n",
+    "newConstructorsWinners.to_csv('wrang/constructorsWinners.csv', index=False)\n",
+    "newConstructorsWinners.to_csv('../../Public-Viz-F1/constructorsWinners.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +688,7 @@
        "      <th></th>\n",
        "      <th>year</th>\n",
        "      <th>constructorName</th>\n",
-       "      <th>wins</th>\n",
+       "      <th>wins_cum</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -625,31 +696,31 @@
        "      <th>0</th>\n",
        "      <td>1950</td>\n",
        "      <td>Alfa Romeo</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1951</td>\n",
        "      <td>Alfa Romeo</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>10.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1952</td>\n",
        "      <td>Alfa Romeo</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>10.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1953</td>\n",
        "      <td>Alfa Romeo</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>10.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1954</td>\n",
        "      <td>Alfa Romeo</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>10.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -658,106 +729,65 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1309</th>\n",
+       "      <th>3426</th>\n",
        "      <td>2018</td>\n",
-       "      <td>Red Bull</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>Wolf</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1310</th>\n",
+       "      <th>3427</th>\n",
        "      <td>2019</td>\n",
-       "      <td>Red Bull</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>Wolf</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1311</th>\n",
+       "      <th>3428</th>\n",
        "      <td>2020</td>\n",
-       "      <td>Red Bull</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>Wolf</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1312</th>\n",
+       "      <th>3429</th>\n",
        "      <td>2021</td>\n",
-       "      <td>Red Bull</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>Wolf</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1313</th>\n",
+       "      <th>3430</th>\n",
        "      <td>2022</td>\n",
-       "      <td>Red Bull</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>Wolf</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1314 rows × 3 columns</p>\n",
+       "<p>3431 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      year constructorName  wins\n",
-       "0     1950      Alfa Romeo   1.0\n",
-       "1     1951      Alfa Romeo   1.0\n",
-       "2     1952      Alfa Romeo   1.0\n",
-       "3     1953      Alfa Romeo   1.0\n",
-       "4     1954      Alfa Romeo   1.0\n",
-       "...    ...             ...   ...\n",
-       "1309  2018        Red Bull   4.0\n",
-       "1310  2019        Red Bull   4.0\n",
-       "1311  2020        Red Bull   4.0\n",
-       "1312  2021        Red Bull   4.0\n",
-       "1313  2022        Red Bull   5.0\n",
+       "      year constructorName  wins_cum\n",
+       "0     1950      Alfa Romeo       6.0\n",
+       "1     1951      Alfa Romeo      10.0\n",
+       "2     1952      Alfa Romeo      10.0\n",
+       "3     1953      Alfa Romeo      10.0\n",
+       "4     1954      Alfa Romeo      10.0\n",
+       "...    ...             ...       ...\n",
+       "3426  2018            Wolf       3.0\n",
+       "3427  2019            Wolf       3.0\n",
+       "3428  2020            Wolf       3.0\n",
+       "3429  2021            Wolf       3.0\n",
+       "3430  2022            Wolf       3.0\n",
        "\n",
-       "[1314 rows x 3 columns]"
+       "[3431 rows x 3 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "columnsConstructorsWinners = ['year', 'raceId', 'raceName', 'constructorName', 'points']\n",
-    "totalPoints = results[columnsConstructorsWinners] \\\n",
-    "              .groupby(['year', 'constructorName'])['points'] \\\n",
-    "              .sum() \\\n",
-    "              .reset_index(name='points')\n",
-    "              \n",
-    "# keep only the winners per year\n",
-    "constructorsWinners = totalPoints.loc[totalPoints.groupby('year')['points'].idxmax()] \n",
-    "\n",
-    "# indicator variable for the winners\n",
-    "constructorsWinners['winner'] = 1\n",
-    "\n",
-    "# get the cumulative count of wins\n",
-    "constructorsWinners['wins'] = constructorsWinners.groupby(['constructorName'])['winner'].cumsum()\n",
-    "\n",
-    "# Get unique car constructors\n",
-    "car_constructors = constructorsWinners['constructorName'].unique()\n",
-    "\n",
-    "# Create a new dataframe with all years and cumulative sum for each constructor\n",
-    "years = range(constructorsWinners['year'].min(), constructorsWinners['year'].max() + 1)\n",
-    "newConstructorsWinners = pd.DataFrame({'year': years})\n",
-    "for constructor in car_constructors:\n",
-    "    constructor_cumsum = constructorsWinners[constructorsWinners['constructorName'] == constructor]['year'].value_counts().sort_index().cumsum()\n",
-    "    newConstructorsWinners[constructor] = newConstructorsWinners['year'].map(constructor_cumsum).fillna(method='ffill').fillna(0)\n",
-    "    # method = 'ffill' gets the last non-null value and fills the nulls with it\n",
-    "\n",
-    "# pivot to make the columns turn into rows\n",
-    "newConstructorsWinners = newConstructorsWinners.melt(id_vars=['year'], var_name='constructorName', value_name='wins')\n",
-    "\n",
-    "newConstructorsWinners.to_csv('wrang/constructorsWinners.csv', index=False)\n",
-    "newConstructorsWinners.to_csv('../../Public-Viz-F1/constructorsWinners.csv', index=False)\n",
-    "\n",
-    "newConstructorsWinners"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "columnsConstructorsWinnersByRace = ['year', 'raceId', 'raceName', 'constructorName', 'position']\n",
-    "totalWins = results[columnsConstructorsWinnersByRace].query(\"position == '1'\") \\\n",
+    "totalWins = results[columnsConstructorsWinnersByRace].query(\"position == '1'\").drop_duplicates() \\\n",
     "              .groupby(['year', 'constructorName'])['position'] \\\n",
     "              .count() \\\n",
     "              .reset_index(name='wins')\n",
@@ -769,7 +799,9 @@
     "newConstructorsWinnersByRace = totalWins.melt(id_vars=['year'], var_name='constructorName', value_name='wins_cum')\n",
     "\n",
     "newConstructorsWinnersByRace.to_csv('wrang/constructorRaceWins.csv', index=False)\n",
-    "newConstructorsWinnersByRace.to_csv('../../Public-Viz-F1/constructorRaceWins.csv', index=False)"
+    "newConstructorsWinnersByRace.to_csv('../../Public-Viz-F1/constructorRaceWins.csv', index=False)\n",
+    "\n",
+    "newConstructorsWinnersByRace"
    ]
   }
  ],
