--- a/data/dataWrang.ipynb
+++ b/data/dataWrang.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
        "[25840 rows x 18 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
     "\n",
     "races = pd.read_csv('source/races.csv')\n",
     "races.rename(columns={'name': 'raceName'}, inplace=True)\n",
-    "races = races[['raceId', 'year', 'raceName']]\n",
+    "races = races[['raceId', 'year', 'date', 'raceName']]\n",
     "\n",
     "drivers = pd.read_csv('source/drivers.csv')\n",
     "drivers['driverFullname'] = drivers['forename'] + ' ' + drivers['surname']\n",
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -391,10 +391,10 @@
      "output_type": "stream",
      "text": [
       "(25840, 5)\n",
-      "(25840, 7)\n",
       "(25840, 8)\n",
       "(25840, 9)\n",
-      "(30773, 12)\n"
+      "(25840, 10)\n",
+      "(30773, 13)\n"
      ]
     }
    ],
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -565,13 +565,13 @@
        "[2482 rows x 3 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "columnsDriverWinners = ['year', 'raceId', 'raceName', 'driverFullname', 'points']\n",
+    "columnsDriverWinners = ['year', 'raceId', 'date', 'raceName', 'driverFullname', 'points']\n",
     "totalPoints = results[columnsDriverWinners].drop_duplicates() \\\n",
     "              .groupby(['year', 'driverFullname'])['points'] \\\n",
     "              .sum() \\\n",
@@ -614,11 +614,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "columnsConstructorsWinners = ['year', 'raceId', 'raceName', 'constructorName', 'points']\n",
+    "columnsConstructorsWinners = ['year', 'raceId', 'date', 'raceName', 'constructorName', 'points']\n",
     "\n",
     "flt = results['year'] >= 1958\n",
     "\n",
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -780,13 +780,13 @@
        "[3431 rows x 3 columns]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "columnsConstructorsWinnersByRace = ['year', 'raceId', 'raceName', 'constructorName', 'position']\n",
+    "columnsConstructorsWinnersByRace = ['year', 'raceId', 'date', 'raceName', 'constructorName', 'position']\n",
     "totalWins = results[columnsConstructorsWinnersByRace].query(\"position == '1'\").drop_duplicates() \\\n",
     "              .groupby(['year', 'constructorName'])['position'] \\\n",
     "              .count() \\\n",
@@ -802,6 +802,198 @@
     "newConstructorsWinnersByRace.to_csv('../../Public-Viz-F1/constructorRaceWins.csv', index=False)\n",
     "\n",
     "newConstructorsWinnersByRace"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### Getting `positions.csv`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>date</th>\n",
+       "      <th>raceName</th>\n",
+       "      <th>driverFullname</th>\n",
+       "      <th>points</th>\n",
+       "      <th>position</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>2008-03-16</td>\n",
+       "      <td>Australian Grand Prix</td>\n",
+       "      <td>Lewis Hamilton</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>2008-03-16</td>\n",
+       "      <td>Australian Grand Prix</td>\n",
+       "      <td>Nick Heidfeld</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>2008-03-16</td>\n",
+       "      <td>Australian Grand Prix</td>\n",
+       "      <td>Nico Rosberg</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>2008-03-16</td>\n",
+       "      <td>Australian Grand Prix</td>\n",
+       "      <td>Fernando Alonso</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>2008-03-16</td>\n",
+       "      <td>Australian Grand Prix</td>\n",
+       "      <td>Heikki Kovalainen</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30766</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>2022-11-20</td>\n",
+       "      <td>Abu Dhabi Grand Prix</td>\n",
+       "      <td>Mick Schumacher</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30768</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>2022-11-20</td>\n",
+       "      <td>Abu Dhabi Grand Prix</td>\n",
+       "      <td>Kevin Magnussen</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30769</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>2022-11-20</td>\n",
+       "      <td>Abu Dhabi Grand Prix</td>\n",
+       "      <td>Lewis Hamilton</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30770</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>2022-11-20</td>\n",
+       "      <td>Abu Dhabi Grand Prix</td>\n",
+       "      <td>Nicholas Latifi</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30772</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>2022-11-20</td>\n",
+       "      <td>Abu Dhabi Grand Prix</td>\n",
+       "      <td>Fernando Alonso</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>\\N</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>25819 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       year        date               raceName     driverFullname  points  \\\n",
+       "0      2008  2008-03-16  Australian Grand Prix     Lewis Hamilton    10.0   \n",
+       "1      2008  2008-03-16  Australian Grand Prix      Nick Heidfeld     8.0   \n",
+       "2      2008  2008-03-16  Australian Grand Prix       Nico Rosberg     6.0   \n",
+       "3      2008  2008-03-16  Australian Grand Prix    Fernando Alonso     5.0   \n",
+       "4      2008  2008-03-16  Australian Grand Prix  Heikki Kovalainen     4.0   \n",
+       "...     ...         ...                    ...                ...     ...   \n",
+       "30766  2022  2022-11-20   Abu Dhabi Grand Prix    Mick Schumacher     0.0   \n",
+       "30768  2022  2022-11-20   Abu Dhabi Grand Prix    Kevin Magnussen     0.0   \n",
+       "30769  2022  2022-11-20   Abu Dhabi Grand Prix     Lewis Hamilton     0.0   \n",
+       "30770  2022  2022-11-20   Abu Dhabi Grand Prix    Nicholas Latifi     0.0   \n",
+       "30772  2022  2022-11-20   Abu Dhabi Grand Prix    Fernando Alonso     0.0   \n",
+       "\n",
+       "      position  \n",
+       "0            1  \n",
+       "1            2  \n",
+       "2            3  \n",
+       "3            4  \n",
+       "4            5  \n",
+       "...        ...  \n",
+       "30766       16  \n",
+       "30768       17  \n",
+       "30769       18  \n",
+       "30770       19  \n",
+       "30772       \\N  \n",
+       "\n",
+       "[25819 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "positionsColumns = ['year', 'date', 'raceName', 'driverFullname', 'points', 'position']\n",
+    "positions = results[positionsColumns].drop_duplicates() \n",
+    "\n",
+    "positions.to_csv('wrang/positions.csv', index=False)\n",
+    "positions"
    ]
   }
  ],
